Fixed: user.html not responsive

--- a/static/login/css/main.css
+++ b/static/login/css/main.css
@@ -40,7 +40,7 @@
 body, html {
   width: 100%;
 	height: 100%;
-	font-family: Poppins-Regular, sans-serif;
+	/* font-family: Poppins-Regular, sans-serif; */
 }
 
 /*---------------------------------------------*/
@@ -88,6 +88,12 @@ ul, li {
 input {
 	outline: none;
 	border: none;
+}
+
+@media (max-width: 450px) {
+  input {
+    font-size: x-small;
+  }
 }
 
 textarea {
