--- a/static/style.css
+++ b/static/style.css
@@ -313,7 +313,7 @@ body {
 
 @font-face {
     font-family: "lobster";
-    src: url(fonts/Lobster 1.3.otf);
+    src: url(fonts/Lobster\ 1.3.otf);
 }
 
 @media screen and (min-width: 992px) {
